Add GraalVM polyglot function factory
